[gd_scene load_steps=5 format=3 uid="uid://cnw01pvvbha64"]

[ext_resource type="PackedScene" uid="uid://dyujv2upnb8lb" path="res://entitiesScenes/player.tscn" id="1_phvr7"]
[ext_resource type="Script" path="res://Scripts/main.gd" id="1_us0ks"]
[ext_resource type="PackedScene" uid="uid://doa818g01xn4" path="res://WorldScenes/hud.tscn" id="3_hi2gu"]
[ext_resource type="PackedScene" uid="uid://de8uq7msyqwt7" path="res://entitiesScenes/demon.tscn" id="5_yn438"]

[node name="Main" type="Node"]
script = ExtResource("1_us0ks")

[node name="Player" parent="." instance=ExtResource("1_phvr7")]
position = Vector2(5, 91)

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="HUD" parent="." instance=ExtResource("3_hi2gu")]
visible = false

[node name="Demon" parent="." instance=ExtResource("5_yn438")]
position = Vector2(1, -82)

[node name="Village_Center" type="Node2D" parent="."]
position = Vector2(1, 0)

[connection signal="game_end" from="." to="HUD" method="_game_end"]
[connection signal="game_end" from="." to="Demon" method="_game_end"]
[connection signal="game_start" from="." to="Player" method="_game_start"]
[connection signal="game_start" from="." to="HUD" method="_game_start"]
[connection signal="game_start" from="." to="Demon" method="_game_start"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="update_health" from="Player" to="HUD" method="_update_health"]
[connection signal="update_mana" from="Player" to="HUD" method="_update_mana"]
[connection signal="update_stamina" from="Player" to="HUD" method="_update_stamina"]
